--- a/.gitignore
+++ b/.gitignore
@@ -211,49 +211,22 @@ hs_err_pid*
 replay_pid*
 
 
-## ###################   React Ignore Section #########################
-## https://github.com/facebook/react/blob/main/.gitignore
+## ###################   React (with TypeScript) Ignore Section #########################
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-.DS_STORE
-node_modules
-scripts/flow/*/.flowconfig
-.flowconfig
-*~
-*.pyc
-.grunt
-_SpecRunner.html
-__benchmarks__
-build/
-remote-repo/
-coverage/
-.module-cache
-fixtures/dom/public/react-dom.js
-fixtures/dom/public/react.js
-test/the-files-to-test.generated.js
-*.log*
-chrome-user-data
-*.sublime-project
-*.sublime-workspace
-.idea
-*.iml
-.vscode
-*.swp
-*.swo
+# dependencies
+/node_modules
 
-packages/react-devtools-core/dist
-packages/react-devtools-extensions/chrome/build
-packages/react-devtools-extensions/chrome/*.crx
-packages/react-devtools-extensions/chrome/*.pem
-packages/react-devtools-extensions/firefox/build
-packages/react-devtools-extensions/firefox/*.xpi
-packages/react-devtools-extensions/firefox/*.pem
-packages/react-devtools-extensions/shared/build
-packages/react-devtools-extensions/.tempUserDataDir
-packages/react-devtools-inline/dist
-packages/react-devtools-shell/dist
-packages/react-devtools-timeline/dist
+# testing
+/coverage
 
+# production
+/build
 
+# misc
+.DS_Store
+.env
+npm-debug.log
 
 ## ###################   C# Ignore Section ###########################
 ## https://gist.github.com/takekazuomi/10955889
